<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc_icon"
            android:title="@string/bbc"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/aljazera_icon"
            android:title="@string/aljazera"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnn_icon1"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
    </group>
    <item
        android:title="@string/upcoming"
        android:menuCategory="secondary">
        <menu>
            <item
                android:id="@+id/upcoming_feature"
                android:icon="@drawable/newyorktimes_icon"
                android:title="@string/new_york_times"
                android:menuCategory="secondary"
                />
        </menu>

    </item>
</menu>